// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render radio checked 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  position: relative;
  width: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  height: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  border-radius: 50%;
  padding: clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.emotion-2 {
  box-sizing: border-box;
  width: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  height: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

<div>
  <div
    class="emotion-0"
    role="radio"
  >
    <div
      class="emotion-1"
      data-testid="pbl-radio"
    >
      <div
        class="emotion-2"
        data-testid="pbl-radio-handle"
      />
      <input
        checked=""
        class="emotion-3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render radio unchecked 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  position: relative;
  width: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  height: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  border-radius: 50%;
  padding: clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.emotion-2 {
  box-sizing: border-box;
  width: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  height: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

<div>
  <div
    class="emotion-0"
    role="radio"
  >
    <div
      class="emotion-1"
      data-testid="pbl-radio"
    >
      <div
        class="emotion-2"
        data-testid="pbl-radio-handle"
      />
      <input
        class="emotion-3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render radio with label 1`] = `
.emotion-0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-body-fontFamily);
  font-size: var(--pbl-theme-typography-body-fontSize);
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-weight: var(--pbl-theme-typography-body-fontWeight);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
}

<label
  class="emotion-0"
  data-testid="pbl-radio-label"
  for="custom-id"
>
  I am a 
  <strong>
    label
  </strong>
</label>
`;
